open source piyush garg

--- a/1. Introduction.md
+++ b/1. Introduction.md
@@ -13,3 +13,8 @@ The opposite of opensource is proprietary or closed source
 
 - **Open source** : Libre Office , GNU Image manipulation
 - **Closed source** : Microsoft office , Adobe Photoshop
+
+## Resources
+
+1. [What is opensource](https://opensource.com/resources/what-open-source)
+2. [Info about OSS](https://www.synopsys.com/glossary/what-is-open-source-software.html)
